s390x support for Bazel

--- a/src/test/shell/testenv.sh.tmpl
+++ b/src/test/shell/testenv.sh.tmpl
@@ -353,6 +353,7 @@ EOF
         "remotejdk17_win"
         "remotejdk17_win_arm64"
         "remotejdk21_linux"
+	"remotejdk21_linux_s390x"
         "remotejdk21_macos"
         "remotejdk21_macos_aarch64"
         "remotejdk21_win"
